2023-07-10T08:17:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5505719522 # 1711
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
* notice: last 14d: unq all: 1 3
* notice: prev accum: outdated-unq outdated-all / unq all: 87 328 / 88 329
* notice: next accum: outdated-unq outdated-all / unq all: 88 329 / 89 332
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2023-06-12] / [2023-07-10]

2022-12-08T16:27:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3650154378 # 1101
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 74 307 / 75 308
* notice: next accum: outdated-unq outdated-all / unq all: 75 308 / 76 309
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-21] / [2022-12-08]

2022-11-22T01:58:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3519691602 # 1051
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 73 303 / 74 307
* notice: next accum: outdated-unq outdated-all / unq all: 74 307 / 75 308
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-26] / [2022-11-21]

2022-10-26T08:29:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3327406409 # 971
* notice: last 14d: unq all: 1 4
* notice: prev accum: outdated-unq outdated-all / unq all: 72 302 / 73 303
* notice: next accum: outdated-unq outdated-all / unq all: 73 303 / 74 307
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2022-10-03] / [2022-10-26]

2022-10-12T08:33:24Z: