@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-07-10T08:17:29Z",
+  "timestamp" : "2023-07-20T08:14:25Z",
   "count_outdated" : 329,
   "uniques_outdated" : 88,
-  "count" : 332,
-  "uniques" : 89,
+  "count" : 333,
+  "uniques" : 90,
   "views" : [
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
