@@ -1,3 +1,12 @@
+2023-07-20T08:14:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5608547896 # 1741
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
+* notice: last 14d: unq all: 2 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 88 329 / 89 332
+* notice: next accum: outdated-unq outdated-all / unq all: 88 329 / 90 333
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-20]
+
 2023-07-10T08:17:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5505719522 # 1711
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
